[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "portfolio-liquidity-runway-lab"
version = "0.7.0"
description = "Static local portfolio liquidity runway packet builder with no runtime dependencies."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "Portfolio Liquidity Runway Lab contributors"}]
keywords = ["liquidity", "runway", "portfolio", "cli", "static-analysis"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Financial and Insurance Industry",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Office/Business :: Financial",
]
dependencies = []

[project.scripts]
portfolio-liquidity-runway-lab = "portfolio_liquidity_runway_lab.cli:main"

[tool.setuptools.packages.find]
include = ["portfolio_liquidity_runway_lab*"]

[tool.setuptools.package-data]
portfolio_liquidity_runway_lab = ["examples/*.json", "examples/*.csv"]
